--- a/image puzzle game/index.html
+++ b/image puzzle game/index.html
@@ -166,7 +166,7 @@
     <div class="container">
         <h1>GAME TITLE</h1>
         <div class="buttons-container">
-    <a href="game.html" class="btn play-btn"><span>Play</span></a>
+    <a href="#" class="btn play-btn"><span>Play</span></a>
     <a href="instructions.html" class="btn instructions-btn"><span>Instructions</span></a>
 </div>
     </div>
